Bootes nearly nearly nearly there

--- a/dmu1/dmu1_ml_Bootes/2.1_Brown_Reformatting.ipynb
+++ b/dmu1/dmu1_ml_Bootes/2.1_Brown_Reformatting.ipynb
@@ -1115,7 +1115,7 @@
     "    })\n",
     "\n",
     "\n",
-    "help_catalogue = Table.read(\"./data/{}\")[list(help_imported_columns,help_catalogue_name)]\n",
+    "help_catalogue = Table.read(\"./data/{}\".format(help_catalogue_name))[list(help_imported_columns)]\n",
     "for column in help_imported_columns:\n",
     "    help_catalogue[column].name = help_imported_columns[column]\n",
     "\n",
