More Bootes tinkering

--- a/dmu1/dmu1_ml_Bootes/2.1_Brown_Reformatting.ipynb
+++ b/dmu1/dmu1_ml_Bootes/2.1_Brown_Reformatting.ipynb
@@ -1827,8 +1827,8 @@
     "    1 * ~np.isnan(merged_catalogue['f_ap_mosaic_i']) +\n",
     "    1 * ~np.isnan(merged_catalogue['f_ap_mosaic_b']) +\n",
     "    \n",
-    "    1 * ~np.isnan(merged_catalogue['f_ap_lbcb_u']) +\n",
-    "    1 * ~np.isnan(merged_catalogue['f_ap_lbcb_y']) \n",
+    "    1 * ~np.isnan(merged_catalogue['f_ap_lbc_u']) +\n",
+    "    1 * ~np.isnan(merged_catalogue['f_ap_lbc_y']) \n",
     "  \n",
     "    \n",
     "\n",
