fill values on Bootes

--- a/dmu1/dmu1_ml_Bootes/2.2_HELP_Brown_Merging.ipynb
+++ b/dmu1/dmu1_ml_Bootes/2.2_HELP_Brown_Merging.ipynb
@@ -223,6 +223,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for col in master_catalogue.colnames:\n",
+    "    if \"m_\" in col or \"merr_\" in col or \"f_\" in col or \"ferr_\" in col or \"stellarity\" in col:\n",
+    "        master_catalogue[col].fill_value = np.nan\n",
+    "    elif \"flag\" in col:\n",
+    "        master_catalogue[col].fill_value = 0\n",
+    "    elif \"id\" in col:\n",
+    "        master_catalogue[col].fill_value = -1\n",
+    "        \n",
+    "master_catalogue = master_catalogue.filled()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": true,
