--- a/dmu1/dmu1_ml_Bootes/2.2_HELP_Brown_Merging.ipynb
+++ b/dmu1/dmu1_ml_Bootes/2.2_HELP_Brown_Merging.ipynb
@@ -299,6 +299,29 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "columns = [\"help_id\", \"field\", \"ra\", \"dec\", \"hp_idx\"]\n",
+    "\n",
+    "bands = [column[5:] for column in merged_catalogue.colnames if 'f_ap' in column]\n",
+    "for band in bands:\n",
+    "    columns += [\"f_ap_{}\".format(band), \"ferr_ap_{}\".format(band),\n",
+    "                \"m_ap_{}\".format(band), \"merr_ap_{}\".format(band),\n",
+    "                \"f_{}\".format(band), \"ferr_{}\".format(band),\n",
+    "                \"m_{}\".format(band), \"merr_{}\".format(band),\n",
+    "                #\"flag_{}\".format(band)\n",
+    "               ]    \n",
+    "    \n",
+    "columns += [\"stellarity\",  \"flag_cleaned\", \"flag_merged\", \"flag_gaia\", \"flag_optnir_obs\", \n",
+    "            \"flag_optnir_det\", \"ebv\", 'zspec_association_flag', 'zspec_qual', 'zspec', \"stellarity_origin\"] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": true,
     "deletable": true,
     "editable": true
@@ -306,7 +329,7 @@
    "outputs": [],
    "source": [
     "master_catalogue = master_catalogue.filled()\n",
-    "master_catalogue.write(\"{}/master_catalogue_bootes{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)"
+    "master_catalogue[columns].write(\"{}/master_catalogue_bootes{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)"
    ]
   },
   {
