--- a/dmu1/dmu1_ml_Bootes/2.2_HELP_Brown_Merging.ipynb
+++ b/dmu1/dmu1_ml_Bootes/2.2_HELP_Brown_Merging.ipynb
@@ -111,7 +111,9 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -126,7 +128,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -207,6 +211,7 @@
    },
    "outputs": [],
    "source": [
+    "in_both.remove('help_id')\n",
     "for col in in_both:\n",
     "    has_brown = (master_catalogue['brown_help_id'] != '-1')\n",
     "                \n",
@@ -218,6 +223,12 @@
     "    master_catalogue[\"help_{}\".format(col)].name = col\n",
     "    master_catalogue.remove_column(\"brown_{}\".format(col))\n",
     "    \n",
+    "#Deal with ids seperately\n",
+    "has_brown = (master_catalogue['brown_help_id'] != '-1')\n",
+    "master_catalogue[\"help_help_id\")][has_brown] = master_catalogue[\"brown_help_id\"][has_brown]\n",
+    "master_catalogue[\"help_help_id\"].name = \"help_id\"\n",
+    "master_catalogue.remove_column('brown_help_id')\n",
+    "    \n",
     "for col in only_in_brown:\n",
     "    master_catalogue[\"brown_{}\".format(col)].name = col"
    ]
@@ -226,7 +237,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -299,7 +312,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -334,7 +349,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## 5 - Make final cross ID catalogue"
    ]
@@ -343,7 +361,9 @@
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -377,7 +397,9 @@
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -412,7 +434,9 @@
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -446,7 +470,9 @@
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -522,7 +548,9 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
