GAMA12 - final merge

--- a/dmu32/dmu32_GAMA-12/GAMA-12_catalogue_merging.ipynb
+++ b/dmu32/dmu32_GAMA-12/GAMA-12_catalogue_merging.ipynb
@@ -2,10 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# GAMA-12 - Merging HELP data products\n",
     "\n",
@@ -18,9 +15,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -45,9 +40,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -67,25 +60,21 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Set this to true to produce only the catalogue for CIGALE and to false \n",
     "# to continue and merge the CIGALE results too.\n",
-    "FIRST_RUN_FOR_CIGALE = True\n",
+    "MAKE_CIGALE_CATALOGUE = True\n",
+    "MAKE_FINAL_CATALOGUE = True\n",
     "\n",
     "SUFFIX = '20180218'"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Reading the masterlist, XID+, and photo-z catalogues"
    ]
@@ -94,9 +83,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -111,9 +98,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -138,9 +123,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -182,9 +165,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -234,9 +215,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -255,9 +234,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -278,11 +255,20 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "# Flags\n",
+    "flags = Table.read(\"../../dmu6/dmu6_v_GAMA-12/data/gama-12_20180218_flags.fits)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Merging"
    ]
@@ -291,9 +277,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -312,9 +296,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -333,9 +315,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -355,9 +335,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -370,11 +348,31 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "for col in flags.colnames:\n",
+    "    if 'flag' in col:\n",
+    "        try:\n",
+    "            merged_table.remove_column(col)\n",
+    "        except KeyError:\n",
+    "            print(\"Column: {} not in masterlist.\".format(col))\n",
+    "        \n",
+    "merged_table = join(merged_table, flags, join_type='left')\n",
+    "# Fill values\n",
+    "for col in merged_table.colnames:\n",
+    "    if 'flag' in col:\n",
+    "        merged_table[col].fill_value = False\n",
+    "merged_table = merged_table.filled()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Saving the catalogue for CIGALE (first run)"
    ]
@@ -383,13 +381,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "if FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_CIGALE_CATALOGUE:\n",
     "    \n",
     "    # Sorting the columns\n",
     "    bands = [col[2:] for col in merged_table.colnames\n",
@@ -415,15 +411,12 @@
     "    print(set(merged_table.colnames) - set(columns)  ) \n",
     "    \n",
     "    \n",
-    "    merged_table.write(\"data/GAMA-12_{}_cigale.fits\".format(SUFFIX), overwrite=True)"
+    "    merged_table[columns].write(\"data/GAMA-12_{}_cigale.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Merging CIGALE outputs\n",
     "\n",
@@ -434,16 +427,14 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
     "    # Cigale outputs\n",
-    "    cigale = Table.read(\"../../dmu28/dmu28_GAMA-12/data/HELP_final_results.fits\")\n",
+    "    cigale = Table.read(\"../../dmu28/dmu28_GAMA-12/data/zphot/HELP_final_results.fits\")\n",
     "    cigale['id'].name = \"help_id\"\n",
     "\n",
     "    # We convert the various Chi2 and threshold to flags\n",
@@ -486,13 +477,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
     "    merged_table = join(merged_table, cigale, join_type='left')\n",
     "\n",
@@ -507,10 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Sorting columns\n",
     "\n",
@@ -521,13 +507,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
     "    bands = [col[2:] for col in merged_table.colnames\n",
     "             if col.startswith('f_') and not col.startswith('f_ap')]\n",
@@ -538,13 +522,11 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
     "    columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', 'redshift', 'zspec']\n",
     "    for band in bands:\n",
@@ -567,24 +549,21 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
     "    # Check that we did not forget any column\n",
+    "    print(set(columns) - set(merged_table.colnames)) \n",
+    "    print(set(merged_table.colnames) - set(columns)  ) \n",
     "    assert set(columns) == set(merged_table.colnames)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Saving"
    ]
@@ -593,13 +572,11 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
     "    merged_table[columns].write(\"data/GAMA-12.fits\")"
    ]
