GAMA-09 final merge

--- a/dmu32/dmu32_GAMA-12/GAMA-12_catalogue_merging.ipynb
+++ b/dmu32/dmu32_GAMA-12/GAMA-12_catalogue_merging.ipynb
@@ -263,7 +263,7 @@
    "outputs": [],
    "source": [
     "# Flags\n",
-    "flags = Table.read(\"../../dmu6/dmu6_v_GAMA-12/data/gama-12_20180218_flags.fits)"
+    "flags = Table.read(\"../../dmu6/dmu6_v_GAMA-12/data/gama-12_20180218_flags.fits\")"
    ]
   },
   {
