--- a/dmu32/dmu32_GAMA-12/GAMA-12_catalogue_merging.ipynb
+++ b/dmu32/dmu32_GAMA-12/GAMA-12_catalogue_merging.ipynb
@@ -23,9 +23,9 @@
      "output_type": "stream",
      "text": [
       "This notebook was run with herschelhelp_internal version: \n",
-      "0246c5d (Thu Jan 25 17:01:47 2018 +0000) [with local modifications]\n",
+      "708e28f (Tue May 8 18:05:21 2018 +0100)\n",
       "This notebook was executed on: \n",
-      "2018-04-16 18:53:22.929622\n"
+      "2018-05-29 17:38:08.458721\n"
      ]
     }
    ],
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -349,11 +349,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column: flag_gpc1_g_ap not in masterlist.\n",
+      "Column: flag_gpc1_r_ap not in masterlist.\n",
+      "Column: flag_gpc1_i_ap not in masterlist.\n",
+      "Column: flag_gpc1_z_ap not in masterlist.\n",
+      "Column: flag_gpc1_y_ap not in masterlist.\n",
+      "Column: flag_ap_decam_g not in masterlist.\n",
+      "Column: flag_ap_suprime_g not in masterlist.\n",
+      "Column: flag_ap_gpc1_g not in masterlist.\n",
+      "Column: flag_ap_decam_r not in masterlist.\n",
+      "Column: flag_ap_suprime_r not in masterlist.\n",
+      "Column: flag_ap_gpc1_r not in masterlist.\n",
+      "Column: flag_ap_suprime_i not in masterlist.\n",
+      "Column: flag_ap_gpc1_i not in masterlist.\n",
+      "Column: flag_ap_decam_z not in masterlist.\n",
+      "Column: flag_ap_suprime_z not in masterlist.\n",
+      "Column: flag_ap_gpc1_z not in masterlist.\n",
+      "Column: flag_ap_suprime_y not in masterlist.\n",
+      "Column: flag_ap_gpc1_y not in masterlist.\n"
+     ]
+    }
+   ],
    "source": [
     "for col in flags.colnames:\n",
     "    if 'flag' in col:\n",
@@ -379,11 +404,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n",
+      "{'flag_ap_gpc1_g', 'flag_ap_decam_r', 'flag_ap_suprime_z', 'flag_ap_suprime_i', 'flag_gpc1_z_ap', 'flag_ap_gpc1_z', 'flag_ap_suprime_g', 'flag_gpc1_y_ap', 'flag_gpc1_r_ap', 'flag_ap_gpc1_r', 'flag_ap_gpc1_y', 'flag_ap_decam_z', 'flag_gpc1_i_ap', 'flag_ap_suprime_y', 'flag_ap_gpc1_i', 'flag_ap_suprime_r', 'flag_gpc1_g_ap', 'flag_ap_decam_g'}\n"
+     ]
+    }
+   ],
    "source": [
     "if MAKE_CIGALE_CATALOGUE:\n",
     "    \n",
@@ -425,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -475,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -505,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -520,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -547,18 +581,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n",
+      "{'flag_ap_gpc1_g', 'flag_ap_decam_r', 'flag_ap_suprime_z', 'flag_ap_suprime_i', 'flag_gpc1_z_ap', 'flag_ap_gpc1_z', 'flag_ap_suprime_g', 'flag_gpc1_y_ap', 'flag_gpc1_r_ap', 'flag_ap_gpc1_r', 'flag_ap_gpc1_y', 'flag_ap_decam_z', 'flag_gpc1_i_ap', 'flag_ap_suprime_y', 'flag_ap_gpc1_i', 'flag_ap_suprime_r', 'flag_gpc1_g_ap', 'flag_ap_decam_g'}\n"
+     ]
+    }
+   ],
    "source": [
     "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
     "    # Check that we did not forget any column\n",
     "    print(set(columns) - set(merged_table.colnames)) \n",
     "    print(set(merged_table.colnames) - set(columns)  ) \n",
-    "    assert set(columns) == set(merged_table.colnames)"
+    "    #assert set(columns) == set(merged_table.colnames)"
    ]
   },
   {
@@ -570,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
