--- a/dmu6/dmu6_v_AKARI-NEP/4_flags_akari-nep.ipynb
+++ b/dmu6/dmu6_v_AKARI-NEP/4_flags_akari-nep.ipynb
@@ -88,9 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -142,7 +140,9 @@
     "    print('  Aperture magnitude')\n",
     "    flag_mag(flagcol_ap, mask_ap)\n",
     "    print('  Total magnitude')\n",
-    "    flag_mag(flagcol_tot, mask_tot)"
+    "    flag_mag(flagcol_tot, mask_tot)\n",
+    "    \n",
+    "    "
    ]
   },
   {
