--- a/dmu6/dmu6_v_GAMA-12/4_flags_gama12.ipynb
+++ b/dmu6/dmu6_v_GAMA-12/4_flags_gama12.ipynb
@@ -94,9 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -140,7 +138,7 @@
     "    basecol = band.replace(\" \", \"_\").lower()\n",
     "    \n",
     "    ecol_ap, ecol_tot = \"merr_ap_{}\".format(basecol), \"merr_{}\".format(basecol)\n",
-    "    flagcol_ap, flagcol_tot = \"flag_{}_ap\".format(basecol), \"flag_{}\".format(basecol)\n",
+    "    flagcol_ap, flagcol_tot = \"flag_ap_{}\".format(basecol), \"flag_{}\".format(basecol)\n",
     "    \n",
     "    mask_ap  = np.where(master_catalogue[ecol_ap]  == gpc1_err)[0]\n",
     "    mask_tot = np.where(master_catalogue[ecol_tot] == gpc1_err)[0]\n",
@@ -149,6 +147,9 @@
     "    flag_mag(flagcol_ap, mask_ap)\n",
     "    print('  Total magnitude')\n",
     "    flag_mag(flagcol_tot, mask_tot)\n",
+    "    \n",
+    "    master_catalogue[flagcol_tot] = master_catalogue[flagcol_tot] | master_catalogue[flagcol_ap]\n",
+    "    master_catalogue.remove_column(flagcol_ap)\n",
     "    "
    ]
   },
@@ -162,9 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -223,9 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -333,8 +330,10 @@
     "                      ecol1, ecol2,\n",
     "                      flagcol1, flagcol2,\n",
     "                      labels=(\"{} (aperture)\".format(band1), \"{} (aperture)\".format(band2)))\n",
+    "            \n",
     "        except KeyError:\n",
     "            print(\"One of {} and {} is not present in the catalogue.\".format(col1, col2))\n",
+    "            \n",
     "                      \n",
     "        \n",
     "        # Tot mag\n",
@@ -347,9 +346,9 @@
     "                      ecol1, ecol2,\n",
     "                      flagcol1, flagcol2,\n",
     "                      labels=(\"{} (total)\".format(band1), \"{} (total)\".format(band2)))   \n",
+    "            \n",
     "        except KeyError:\n",
-    "            print(\"One of {} and {} is not present in the catalogue.\".format(col1, col2))         \n",
-    "                      "
+    "            print(\"One of {} and {} is not present in the catalogue.\".format(col1, col2))                    "
    ]
   },
   {
@@ -357,6 +356,26 @@
    "metadata": {},
    "source": [
     "## 3. Save table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Merge any aperture flags\n",
+    "for col in master_catalogue.colnames:\n",
+    "    if col.startswith(\"flag_ap_\"):\n",
+    "        try:\n",
+    "            master_catalogue[col.replace(\"_ap_\", \"_\")] = (master_catalogue[col.replace(\"_ap_\", \"_\")] |\n",
+    "                                                          master_catalogue[col])\n",
+    "            master_catalogue.remove_column(col)\n",
+    "        except KeyError:\n",
+    "            print(\"{} only has aperture flags.\".format(col))\n",
+    "            master_catalogue.rename_column(col, col.replace(\"_ap_\", \"_\"))"
    ]
   },
   {
